# secav-prover

./: .gitignore  Dockerfile  Makefile  README.md  secav-prover.cabal
document/: root.tex
haskell/app/: Main.hs
haskell/lib/: AST.hs  Instances.hs  IsabelleGenerator.hs  Lexer.hs  Parser.hs  ProofExtractor.hs  ProofLexer.hs  ProofParser.hs  ProverInstances.hs  SeCaVGenerator.hs  SeCaVTranslator.hs  ShortAST.hs  ShortLexer.hs  ShortParser.hs  Unshortener.hs
haskell/prover/: Abstract_Completeness.hs  Arith.hs  FSet.hs  Lazy.hs  List.hs  MaybeExt.hs  Option.hs  Orderings.hs  Product_Type.hs  Prover.hs  SeCaV.hs  SeCaV_Enum.hs  Set.hs  Stream.hs  Tree.hs
isabelle/: Completeness.thy  Countermodel.thy  EPathHintikka.thy  Export.thy  Finite_Proof_Soundness.thy  Hintikka.thy  Model.thy  Prover.thy  ProverLemmas.thy  ROOT  Results.thy  SeCaV_Enum.thy  Sequent1.thy  Soundness.thy  Terms.thy  Usemantics.thy
isabelle/document/: root.tex
test/: Runner.hs  Tests.hs
test/completeness/: Runner.hs
test/soundness/: Runner.hs  Tests.hs
