cabal-version:       2.4
name:                secav-prover
version:             0.1.0.0
synopsis:            Prover for the SeCaV system
license:             GPL-3.0-only
license-file:        LICENSE
author:              Frederik Krogsdal Jacobsen
maintainer:          fkjacobsen@gmail.com
category:            Math
description:         A proof search implementation for the SeCaV system of first-order logic.

library export
  exposed-modules:    SeCaV_Enum
                    , Abstract_Completeness
                    , FSet
                    , Arith
                    , SeCaV
                    , Set
  other-modules:      Lazy
                    , Product_Type
                    , Nat_Bijection
                    , Sum_Type
                    , Orderings
                    , List
                    , Stream
                    , MaybeExt
  build-depends:      base
  hs-source-dirs:     haskell/export
  default-language:   Haskell2010
                     
library interface
  exposed-modules:     Instances
                     , AST
                     , Lexer
                     , Parser
                     , SeCaVGenerator
                     , ProofExtractor
                     , ProofLexer
                     , ProofParser
                     , IsabelleGenerator
  build-depends:       base ^>=4.13.0.0
                     , export
                     , parsec
                     , bimap
                     , mtl
  hs-source-dirs:      haskell/lib
  default-language:    Haskell2010

test-suite test-prover
  type:                detailed-0.9
  test-module:         Runner
  other-modules:       Tests
  build-depends:       base ^>=4.13.0.0
                     , Cabal >= 1.9.2
                     , process
                     , directory
                     , mtl
                     , export
                     , interface
  hs-source-dirs:      test
  default-language:    Haskell2010

executable secav-prover
  main-is:             Main.hs
  build-depends:       base ^>=4.13.0.0
                     , export
                     , interface
                     , filepath
                     , optparse-applicative
  hs-source-dirs:      haskell/app
  default-language:    Haskell2010
